Fixed weird postContent alignment (different for firefox vs. chrome/IE), tested in all three browsers, and it's OK now.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -204,38 +204,34 @@ height: 80%; /*Resize the profile-picture here, picture will take up all the spa
 
 /** Shared UI Elements **/
 .ui_TextArea {
+width: 100%;
 resize: none;
 color:grey;
-width: 80%;
-height: 200px;
-outline: #000000 groove 1px;
 border: none;
-margin: 0px 0px 0px 0px;
+margin: none;
 display: none;
 }
 
 .ui_TextAreaButton {
-	float: right;
-	width: 20%;
-	margin: 0px 0px 0px 0px;
-	border-left: 0px;
-	border-right:0px;
-	border-bottom:0px;
-	border-top:0px;
-	outline: #000000 groove 1px;
-	background-color: #e76509;
-	color: white;
-	display:none;
+width: 100%;
+height: 30px;
+margin: none;
+border: none;
+padding: none;
+background-color: #e76509;
+color: white;
+display:none;
 }
 
 .ui_TextBox {
 	height:25px;
-	width: 80%;
+	width: 75%;
 	display: inline-block;
 	outline: #000000 groove 1px;
 }
 
 .ui_TextBoxButton {
+	position: relative;
 	height:25px;
 	float: right;
 	display: inline-block;
@@ -248,15 +244,23 @@ display: none;
 	outline: #000000 groove 1px;
 }
 
-
-
 .ui_InputContainer {
+  outline: black groove 1px;
+	width: 100%;
+	height: auto;
+	background-color: white;
+}
+
+.ui_ButtonText {
+	background-color: #e76509;	
+	color: white;
+	height: 100%;
 	width: 100%;
 }
 
 
 
-/** pagelet **/
+/** pagelet **/ui
 .pagelet {
   height: 40px;
   width: 100%;
